stream problems